experiments/t5/reward_models/logs/30068_0.log
hi
Tue 21 Mar 23:58:55 GMT 2023
compute-permanent-node-912
uid=10025(asa_cooper_stickland) gid=10012(owain_evans) groups=10012(owain_evans)
/data/asa_cooper_stickland/situational-awareness
doing it in one go
1
Traceback (most recent call last):
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/train.py", line 117, in <module>
    from scripts.t5.generate_data import generate_datasets
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/generate_data.py", line 35
    else:
    ^
SyntaxError: invalid syntax
